--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.14</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<spring.version>4.3.2.RELEASE</spring.version>
