--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
 			<version>1.16.14</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+
+
 	</dependencies>
 	<properties>
 		<spring.version>4.3.2.RELEASE</spring.version>
