--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 			<version>1.6.11</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 		<!-- log -->
 		<dependency>
 			<groupId>log4j</groupId>
