--- a/src/main/docs/elk/logstash-jdbc.conf
+++ b/src/main/docs/elk/logstash-jdbc.conf
@@ -6,22 +6,32 @@ input {
             jdbc_validate_connection => true
             jdbc_driver_library => "/home/liubo/tool/mysql-connector-java-6.0.6.jar"
             jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-            statement => "SELECT * FROM testtable;"
-            #schedule => "* * * * *"
+            statement => "SELECT * FROM testtable where Date > :sql_last_value order by Date"
+            schedule => "* * * * *"
             #codec => "json"
+            use_column_value => true
+            tracking_column => Date
+
         }
 }
 
 
 
-filter { }
+filter {
+  if [city] == "Cape Town" {
+    mutate {
+       rename => {"city" => "country"}
+       replace => [ "country", "South Africa" ]
+      }
+   }
+}
 
 
 output {
     elasticsearch {
-        index => "mysqltest"
-        document_type => "mysqltest_type"
-        document_id => "%{PRIMARY_KEY}"
+        index => "testtable"
+        document_type => "data"
         hosts => "localhost:9200"
+        document_id => "%{personid}"
     }
 }
