--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,6 @@
 	<groupId>com.benz</groupId>
 	<artifactId>interview</artifactId>
     <packaging>pom</packaging>
-    <groupId>com.benz</groupId>
-    <artifactId>interview</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
 
@@ -117,6 +115,14 @@
 			<version>1.16.14</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+			<!--<scope>provided</scope>-->
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -128,10 +134,47 @@
             <artifactId>gson</artifactId>
             <version>2.7</version>
         </dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>6.5.1</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.couchbase.client</groupId>
+			<artifactId>core-io</artifactId>
+			<version>1.4.6</version>
+		</dependency>
 
-    </dependencies>
+		<!-- Kafka dependency -->
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.11</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
+
+	</dependencies>
 	<properties>
 		<spring.version>4.3.2.RELEASE</spring.version>
+		<!--<log4j.version>1.2.17</log4j.version>-->
+		<slf4j.version>1.7.21</slf4j.version>
+		<commons-cli.version>1.2</commons-cli.version>
+		<jackson.version>2.6.3</jackson.version>
+		<kafka.version>0.11.0.1</kafka.version>
 	</properties>
 </project>
