--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>xxx-jpa</module>
         <module>depth</module>
         <module>xml</module>
+        <module>mapper</module>
     </modules>
 
     <dependencies>
@@ -130,16 +131,7 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.7</version>
-        </dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
-		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
